--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,10 +2,22 @@ pipeline {
     agent any
 
     stages {
-        stage('Hello') {
+        stage('Build') {
+            agent {
+                docker {
+                    image "node:18-alpine"
+                    reuseNone true
+                }
+            }
             steps {
-                sh 'echo "Hello using sh username: "'
-                sh 'whoami'
+                sh '''
+                ls -la
+                node --version
+                npm --version
+                npm ci
+                npm run build
+                ls -la
+                '''
             }
         }
     }
