--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
             agent {
                 docker {
                     image "node:18-alpine"
-                    reuseNone true
+                    reuseNode true
                 }
             }
             steps {
